--- a/package.json
+++ b/package.json
@@ -10,12 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "expres": "0.0.5",
+    "express": "^4.17.1",
+    "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "json-server": "^0.16.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.21",
     "multer": "^1.4.2",
-    "token": "^0.1.0"
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "token": "^0.1.0",
+    "validator": "^13.1.1",
+    "validators": "^0.3.1"
   }
 }
